[lib]
path = "src/lib.rs"

[package]
name = "scupt-util"
version = "0.0.1"
edition = "2021"


[dependencies]
rand = "0.8.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }
tracing = { version = "0.1.37" }
tracing-subscriber = "0.3.17"
console-subscriber = "0.1.10"
env_logger = "0.10.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
bincode = "2.0.0-rc.3"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = { version = "1.0.107", features = ["std", "arbitrary_precision", "preserve_order"] }
tokio = { version = "1.32.0", features = ["full", "tracing"] }
libc = { version = "0.2.148", features = [] }
